y.output
Terminaux inutilisés dans la grammaire

   FLOAT
   MATRIX
   THEN
   DO
   DONE
   ENDIF


État 65 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: INT MAIN '(' ')' '{' stmtlist RETURN NUMBER ';' '}'
    2        | %empty

    3 stmtlist: stmt
    4         | stmtlist stmt

    5 stmt: expr ';'
    6     | PRINT expr ';'
    7     | ID '=' expr ';'
    8     | WHILE tag '(' condition ')' tag stmt
    9     | IF '(' condition ')' tag stmt
   10     | IF '(' condition ')' tag stmt ELSE tagoto stmt
   11     | '{' stmtlist '}'

   12 condition: expr '<' expr
   13          | expr '>' expr
   14          | expr GE expr
   15          | expr LE expr
   16          | expr NE expr
   17          | expr EQ expr

   18 tag: %empty

   19 tagoto: %empty

   20 expr: NUMBER
   21     | ID
   22     | '-' expr
   23     | expr '+' expr
   24     | expr '-' expr
   25     | expr '*' expr
   26     | expr '/' expr
   27     | '(' expr ')'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 1 8 9 10 27
')' (41) 1 8 9 10 27
'*' (42) 25
'+' (43) 23
'-' (45) 22 24
'/' (47) 26
';' (59) 1 5 6 7
'<' (60) 12
'=' (61) 7
'>' (62) 13
'{' (123) 1 11
'}' (125) 1 11
error (256)
ID (258) 7 21
NUMBER (259) 1 20
MAIN (260) 1
RETURN (261) 1
PRINT (262) 6
INT (263) 1
FLOAT (264)
MATRIX (265)
IF (266) 9 10
ELSE (267) 10
WHILE (268) 8
THEN (269)
DO (270)
DONE (271)
ENDIF (272)
GE (273) 14
LE (274) 15
EQ (275) 17
NE (276) 16
UNMIN (277)


Non-terminaux, suivis des règles où ils apparaissent

$accept (35)
    à gauche: 0
program (36)
    à gauche: 1 2, à droite: 0
stmtlist (37)
    à gauche: 3 4, à droite: 1 4 11
stmt (38)
    à gauche: 5 6 7 8 9 10 11, à droite: 3 4 8 9 10
condition (39)
    à gauche: 12 13 14 15 16 17, à droite: 8 9 10
tag (40)
    à gauche: 18, à droite: 8 9 10
tagoto (41)
    à gauche: 19, à droite: 10
expr (42)
    à gauche: 20 21 22 23 24 25 26 27, à droite: 5 6 7 12 13 14 15
    16 17 22 23 24 25 26 27


État 0

    0 $accept: . program $end

    INT  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (program)

    program  aller à l'état 2


État 1

    1 program: INT . MAIN '(' ')' '{' stmtlist RETURN NUMBER ';' '}'

    MAIN  décalage et aller à l'état 3


État 2

    0 $accept: program . $end

    $end  décalage et aller à l'état 4


État 3

    1 program: INT MAIN . '(' ')' '{' stmtlist RETURN NUMBER ';' '}'

    '('  décalage et aller à l'état 5


État 4

    0 $accept: program $end .

    $défaut  accepter


État 5

    1 program: INT MAIN '(' . ')' '{' stmtlist RETURN NUMBER ';' '}'

    ')'  décalage et aller à l'état 6


État 6

    1 program: INT MAIN '(' ')' . '{' stmtlist RETURN NUMBER ';' '}'

    '{'  décalage et aller à l'état 7


État 7

    1 program: INT MAIN '(' ')' '{' . stmtlist RETURN NUMBER ';' '}'

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmtlist  aller à l'état 16
    stmt      aller à l'état 17
    expr      aller à l'état 18


État 8

    7 stmt: ID . '=' expr ';'
   21 expr: ID .

    '='  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 21 (expr)


État 9

   20 expr: NUMBER .

    $défaut  réduction par utilisation de la règle 20 (expr)


État 10

    6 stmt: PRINT . expr ';'

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 21


État 11

    9 stmt: IF . '(' condition ')' tag stmt
   10     | IF . '(' condition ')' tag stmt ELSE tagoto stmt

    '('  décalage et aller à l'état 22


État 12

    8 stmt: WHILE . tag '(' condition ')' tag stmt

    $défaut  réduction par utilisation de la règle 18 (tag)

    tag  aller à l'état 23


État 13

   22 expr: '-' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 24


État 14

   27 expr: '(' . expr ')'

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 25


État 15

   11 stmt: '{' . stmtlist '}'

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmtlist  aller à l'état 26
    stmt      aller à l'état 17
    expr      aller à l'état 18


État 16

    1 program: INT MAIN '(' ')' '{' stmtlist . RETURN NUMBER ';' '}'
    4 stmtlist: stmtlist . stmt

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    RETURN  décalage et aller à l'état 27
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmt  aller à l'état 28
    expr  aller à l'état 18


État 17

    3 stmtlist: stmt .

    $défaut  réduction par utilisation de la règle 3 (stmtlist)


État 18

    5 stmt: expr . ';'
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32
    ';'  décalage et aller à l'état 33


État 19

    7 stmt: ID '=' . expr ';'

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 34


État 20

   21 expr: ID .

    $défaut  réduction par utilisation de la règle 21 (expr)


État 21

    6 stmt: PRINT expr . ';'
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32
    ';'  décalage et aller à l'état 35


État 22

    9 stmt: IF '(' . condition ')' tag stmt
   10     | IF '(' . condition ')' tag stmt ELSE tagoto stmt

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    condition  aller à l'état 36
    expr       aller à l'état 37


État 23

    8 stmt: WHILE tag . '(' condition ')' tag stmt

    '('  décalage et aller à l'état 38


État 24

   22 expr: '-' expr .
   23     | expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    $défaut  réduction par utilisation de la règle 22 (expr)


État 25

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | '(' expr . ')'

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32
    ')'  décalage et aller à l'état 39


État 26

    4 stmtlist: stmtlist . stmt
   11 stmt: '{' stmtlist . '}'

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15
    '}'     décalage et aller à l'état 40

    stmt  aller à l'état 28
    expr  aller à l'état 18


État 27

    1 program: INT MAIN '(' ')' '{' stmtlist RETURN . NUMBER ';' '}'

    NUMBER  décalage et aller à l'état 41


État 28

    4 stmtlist: stmtlist stmt .

    $défaut  réduction par utilisation de la règle 4 (stmtlist)


État 29

   23 expr: expr '+' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 42


État 30

   24 expr: expr '-' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 43


État 31

   25 expr: expr '*' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 44


État 32

   26 expr: expr '/' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 45


État 33

    5 stmt: expr ';' .

    $défaut  réduction par utilisation de la règle 5 (stmt)


État 34

    7 stmt: ID '=' expr . ';'
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32
    ';'  décalage et aller à l'état 46


État 35

    6 stmt: PRINT expr ';' .

    $défaut  réduction par utilisation de la règle 6 (stmt)


État 36

    9 stmt: IF '(' condition . ')' tag stmt
   10     | IF '(' condition . ')' tag stmt ELSE tagoto stmt

    ')'  décalage et aller à l'état 47


État 37

   12 condition: expr . '<' expr
   13          | expr . '>' expr
   14          | expr . GE expr
   15          | expr . LE expr
   16          | expr . NE expr
   17          | expr . EQ expr
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    GE   décalage et aller à l'état 48
    LE   décalage et aller à l'état 49
    EQ   décalage et aller à l'état 50
    NE   décalage et aller à l'état 51
    '>'  décalage et aller à l'état 52
    '<'  décalage et aller à l'état 53
    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32


État 38

    8 stmt: WHILE tag '(' . condition ')' tag stmt

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    condition  aller à l'état 54
    expr       aller à l'état 37


État 39

   27 expr: '(' expr ')' .

    $défaut  réduction par utilisation de la règle 27 (expr)


État 40

   11 stmt: '{' stmtlist '}' .

    $défaut  réduction par utilisation de la règle 11 (stmt)


État 41

    1 program: INT MAIN '(' ')' '{' stmtlist RETURN NUMBER . ';' '}'

    ';'  décalage et aller à l'état 55


État 42

   23 expr: expr . '+' expr
   23     | expr '+' expr .
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 23 (expr)


État 43

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   24     | expr '-' expr .
   25     | expr . '*' expr
   26     | expr . '/' expr

    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 24 (expr)


État 44

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   25     | expr '*' expr .
   26     | expr . '/' expr

    $défaut  réduction par utilisation de la règle 25 (expr)


État 45

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   26     | expr '/' expr .

    $défaut  réduction par utilisation de la règle 26 (expr)


État 46

    7 stmt: ID '=' expr ';' .

    $défaut  réduction par utilisation de la règle 7 (stmt)


État 47

    9 stmt: IF '(' condition ')' . tag stmt
   10     | IF '(' condition ')' . tag stmt ELSE tagoto stmt

    $défaut  réduction par utilisation de la règle 18 (tag)

    tag  aller à l'état 56


État 48

   14 condition: expr GE . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 57


État 49

   15 condition: expr LE . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 58


État 50

   17 condition: expr EQ . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 59


État 51

   16 condition: expr NE . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 60


État 52

   13 condition: expr '>' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 61


État 53

   12 condition: expr '<' . expr

    ID      décalage et aller à l'état 20
    NUMBER  décalage et aller à l'état 9
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14

    expr  aller à l'état 62


État 54

    8 stmt: WHILE tag '(' condition . ')' tag stmt

    ')'  décalage et aller à l'état 63


État 55

    1 program: INT MAIN '(' ')' '{' stmtlist RETURN NUMBER ';' . '}'

    '}'  décalage et aller à l'état 64


État 56

    9 stmt: IF '(' condition ')' tag . stmt
   10     | IF '(' condition ')' tag . stmt ELSE tagoto stmt

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmt  aller à l'état 65
    expr  aller à l'état 18


État 57

   14 condition: expr GE expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 14 (condition)


État 58

   15 condition: expr LE expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 15 (condition)


État 59

   17 condition: expr EQ expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 17 (condition)


État 60

   16 condition: expr NE expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 16 (condition)


État 61

   13 condition: expr '>' expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 13 (condition)


État 62

   12 condition: expr '<' expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr

    '+'  décalage et aller à l'état 29
    '-'  décalage et aller à l'état 30
    '*'  décalage et aller à l'état 31
    '/'  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 12 (condition)


État 63

    8 stmt: WHILE tag '(' condition ')' . tag stmt

    $défaut  réduction par utilisation de la règle 18 (tag)

    tag  aller à l'état 66


État 64

    1 program: INT MAIN '(' ')' '{' stmtlist RETURN NUMBER ';' '}' .

    $défaut  réduction par utilisation de la règle 1 (program)


État 65

    9 stmt: IF '(' condition ')' tag stmt .
   10     | IF '(' condition ')' tag stmt . ELSE tagoto stmt

    ELSE  décalage et aller à l'état 67

    ELSE      [réduction par utilisation de la règle 9 (stmt)]
    $défaut  réduction par utilisation de la règle 9 (stmt)


État 66

    8 stmt: WHILE tag '(' condition ')' tag . stmt

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmt  aller à l'état 68
    expr  aller à l'état 18


État 67

   10 stmt: IF '(' condition ')' tag stmt ELSE . tagoto stmt

    $défaut  réduction par utilisation de la règle 19 (tagoto)

    tagoto  aller à l'état 69


État 68

    8 stmt: WHILE tag '(' condition ')' tag stmt .

    $défaut  réduction par utilisation de la règle 8 (stmt)


État 69

   10 stmt: IF '(' condition ')' tag stmt ELSE tagoto . stmt

    ID      décalage et aller à l'état 8
    NUMBER  décalage et aller à l'état 9
    PRINT   décalage et aller à l'état 10
    IF      décalage et aller à l'état 11
    WHILE   décalage et aller à l'état 12
    '-'     décalage et aller à l'état 13
    '('     décalage et aller à l'état 14
    '{'     décalage et aller à l'état 15

    stmt  aller à l'état 70
    expr  aller à l'état 18


État 70

   10 stmt: IF '(' condition ')' tag stmt ELSE tagoto stmt .

    $défaut  réduction par utilisation de la règle 10 (stmt)
